--- a/public/admin.html
+++ b/public/admin.html
@@ -1,56 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Admin Panel – Grenzwerte</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-    input {
-      margin-left: 10px;
-      width: 60px;
-    }
-    #status {
-      margin-top: 20px;
-      color: green;
-      font-weight: bold;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body { font-family: sans-serif; background: #f0f0f0; padding: 20px; }
+        label, input { display: block; margin: 10px 0; }
+        button { padding: 10px 20px; margin-top: 20px; }
+    </style>
 </head>
 <body>
-  <h2>Grenzwerte für Gyro-Kalibrierung</h2>
-
-  <label>gammaMin: <input type="number" id="gammaMin" value="-20" /></label>
-  <label>gammaMax: <input type="number" id="gammaMax" value="20" /></label>
-  <label>betaMin: <input type="number" id="betaMin" value="-30" /></label>
-  <label>betaMax: <input type="number" id="betaMax" value="30" /></label>
-
-  <button onclick="sendBounds()">Senden</button>
-
-  <div id="status"></div>
-
-  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-  <script>
-    const socket = io();
-
-    function sendBounds() {
-      const gammaMin = parseFloat(document.getElementById('gammaMin').value);
-      const gammaMax = parseFloat(document.getElementById('gammaMax').value);
-      const betaMin = parseFloat(document.getElementById('betaMin').value);
-      const betaMax = parseFloat(document.getElementById('betaMax').value);
-
-      socket.emit("gyroBounds", { gammaMin, gammaMax, betaMin, betaMax });
-
-      document.getElementById('status').textContent = "Gesendet!";
-    }
-  </script>
+    <h2>Laser Admin Panel</h2>
+    <label>Links (min X): <input id="minX" type="number" value="0"></label>
+    <label>Rechts (max X): <input id="maxX" type="number" value="1"></label>
+    <label>Oben (min Y): <input id="minY" type="number" value="0"></label>
+    <label>Unten (max Y): <input id="maxY" type="number" value="1"></label>
+    <button onclick="clearCanvas()">Alles löschen</button>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        const socket = io();
+        function clearCanvas() {
+            socket.emit('clear');
+        }
+    </script>
 </body>
 </html>
